# cluedo

./: README.md  pyproject.toml
runner/: __init__.py  cli.py  exec_map.py  k8s.py
tests/: test_cli.py  test_exec_map.py  test_k8s_integration.py
